# convertToDecimalTime

./: LICENSE  README.md  convert.py  pyproject.toml
src/: convertToDecimalTime.py
